# fivee

./: .drawio  .gitignore  cargo.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: assets.rs  bundles.rs  components.rs  events.rs  grid.rs  grid_cell.rs  lib.rs  math.rs  player.rs  resources.rs  round.rs  selected.rs  selection.rs  settings.rs  short_lived.rs  systems.rs  token.rs  ui.rs  world_cursor.rs
fivee/: Cargo.toml
fivee/assets/meshes/: block.blend  cell.blend  cell.gltf  cube.blend  cube.gltf  selection.blend  selection.gltf  selection2.blend  selector.blend  selector.gltf  selector2.blend  token.gltf
fivee/assets/statblocks/: .toml  goblin.toml  william.statblock  william.toml
fivee/src/: main.rs
plugin_ai/: Cargo.toml
plugin_ai/src/: components.rs  lib.rs  systems.rs
plugin_assets/: Cargo.toml
plugin_assets/src/: lib.rs
plugin_game/: Cargo.toml
plugin_game/src/: lib.rs  startup.rs  systems.rs
plugin_ui/: Cargo.toml
plugin_ui/src/: components.rs  events.rs  lib.rs  startup.rs  systems.rs
rules/: Cargo.toml
rules/src/: lib.rs
system_startup/: Cargo.toml
system_startup/src/: lib.rs
system_ui/: Cargo.toml
system_ui/src/: lib.rs
