[package]
name = "fivee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
common = { path = "../common" }
system_startup = { path = "../system_startup"}
plugin_ui ={ path = "../plugin_ui" }
